Updates influenced by Jon's comments

--- a/B8Paper/10-Introduction.tex
+++ b/B8Paper/10-Introduction.tex
@@ -7,7 +7,7 @@ partners~\cite{PDG_mass}.  These two properties motivate the
 possibility that these neutrinos are `Majorana' rather than `Dirac'
 particles, i.e. different from their respective charged partner
 leptons by being their own
-anti-particle~\cite{Majorana1937,pdg_vogel_piepke}. In 1939 W. Furry
+anti-particle~\cite{Majorana1937,PDG_mass}. In 1939 W. Furry
 pointed out that a Majorana nature of the electron neutrino would
 allow neutrinoless double-beta decay, in which a nucleus undergoes a
 second order $\beta$-decay without producing any neutrinos,
@@ -17,15 +17,15 @@ decay, the second order standard model (SM) \bmd-decay channel in which
 lepton number is conserved by the production of two anti-neutrinos,
 \mbox{$(Z,A)\rightarrow(Z,A+2)+2\beta+2\bar\nu_e$}~\cite{GoeppertMayer1935}.
 
-The standard mechanism of 0{\nbb} decay is parametrized by the
+The standard mechanism of 0\nbb-decay is parametrized by the
 effective Majorana mass, defined as
 \mbox{$m_{\beta\beta}\equiv\left|\sum_i U^2_{ei}m_i\right|$}, where
 $U_{ei}$ are the elements of the PMNS matrix and $m_i$ are the
-neutrino masses~\cite{pdg_vogel_piepke}. Current half-life limits
+neutrino masses~\cite{PDG_mass}. Current half-life limit
 translate to a limit on \mbox{$m_{\beta\beta}\lesssim
-150-700\,\mathrm{meV}$}.  The next generation of 0{\nbb} decay
-experiments~]\cite{pdg_vogel_piepke} seek to be sensitive enough to
-detect or rule out 0{\nbb} decay down to \mbox{$m_{\beta\beta}\lesssim
+61-165\,\mathrm{meV}$}~\cite{KamLANDZen2016}.  The next generation of 0\nbb-decay
+experiments~\cite{NSACreport} seek to be sensitive enough to
+detect or rule out 0\nbb-decay down to \mbox{$m_{\beta\beta}\lesssim
 10$~meV}. This will require a detector to instrument roughly a ton of
 active isotope with good energy resolution and a near zero background.
 
@@ -38,8 +38,8 @@ in operation \cite{Biller2013}.  In a large LS detector, most
 backgrounds can be strongly suppressed through a combination of
 filtration of the LS to remove internal contaminants, self-shielding
 to minimize the effects of external contaminants, and vetoes to reduce
-muon spallation backgrounds. The dominant irreducible backgrounds are
-the standard model 2{\nbb} decay and electron scattering of 
+muon spallation backgrounds. The dominant backgrounds are
+the standard model 2\nbb-decay and electron scattering of 
 neutrinos from $^8$B decays in the sun.
 
  In a previous work~\cite{Aberle2014} we have shown that large-area
@@ -50,14 +50,14 @@ the directions and origin of $\sim$MeV electrons. Here we present a
 study of applying this technique to the topological separation of
 0\nbb-decay signal and \B~ background using a spherical harmonic
 decomposition to analyze the distribution of early (and hence weighted
-toward Cherenkov photons) photo-electrons as a topological
+toward Cherenkov photons) photoelectrons (PEs) as a topological
 discriminant.
 
 The organization of the paper is as follows. 
 Section~\ref{sec:detector_description} describes
 the detector model. Details on event
-kinematics and photoelectron (PE) timing for signal and background are given in
-Section~\ref{sec:kinematics_and_timing} In
+kinematics and PE timing for signal and background are given in
+Section~\ref{sec:kinematics_and_timing}. In
 Section~\ref{sec:topology_and_harmonics}, we introduce the spherical
 harmonic decomposition and discuss the performance of this analysis
 in Section~\ref{sec:performance}. The conclusions are summarized in Section~\ref{sec:conclusions}.
