--- a/B8Paper/50-Conclusions.tex
+++ b/B8Paper/50-Conclusions.tex
@@ -6,7 +6,7 @@ suppress background coming from $^{8}$B solar neutrino
 interactions. Using a default model detector with parameters derived
 from present practice, we show that a sample of detected photons
 enriched in Cherenkov light by a cut on time-of-arrival contains
-directional information that can be used to separate 0{\nbb}~ decay from
+directional information that can be used to separate 0\nbb-decay from
 $^{8}$B solar neutrino interactions. The separation is based on a
 spherical harmonics analysis of the event topologies of the
 two electrons in signal events and the single electron in the
@@ -15,7 +15,7 @@ chromatic dispersion, vertex reconstruction, and the time profile of
 the emission of scintillation light. The development of a scintillator
 with a rise time constant of at least 5~ns would allow a
 Cherenkov-scintillation light separation with a background rejection
-factor for \B~ solar neutrinos of xx and an efficiency for 0\nbb~ signal
-of xx\%.
+factor for \B~ solar neutrinos of 3 and an efficiency for 0\nbb-decay signal
+of 70\%.
 
 
