--- a/B8Paper/B8.tex
+++ b/B8Paper/B8.tex
@@ -55,6 +55,8 @@ Interactions in a Kiloton-Scale Liquid Scintillator Detector By Fast Timing}
 
 \clearpage
 
+\appendix
+\renewcommand*{\thesection}{\Alph{section}}
 \input{Appendix_A}
 
 \clearpage
