--- a/B8Paper/acknowledgements.tex
+++ b/B8Paper/acknowledgements.tex
@@ -4,7 +4,7 @@ National Science Foundation under grant PHY-1066014, and the Driskill
 Foundation, and at MIT by  the
 National Science Foundation under grant 1554875.
 
-We thank G. Orebi Gann of UC for a discussion on expected backgrounds
+We thank G. Orebi Gann for a discussion on expected backgrounds
 at the SNO+ experiment, and J.  Kotilla for discussions on electron
 angular correlations in 0\nbb-decay and for providing data with phase
 factors for generating 0\nbb- and 2\nbb-decay events.  We are grateful
