--- a/B8Paper/bibliography.bib
+++ b/B8Paper/bibliography.bib
@@ -1,3 +1,19 @@
+@article{theia_white_paper,
+      author         = "Alonso, J. R. and others",
+      COMtitle          = "{Advanced Scintillator Detector Concept (ASDC): A Concept
+                        Paper on the Physics Potential of Water-Based Liquid
+                        Scintillator}",
+      year           = "2014",
+      journal        = "arXiv",
+      volume         = "1409.5864",
+      eprint         = "1409.5864",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      reportNumber   = "BNL-106082-2014-JA",
+      SLACcitation   = "%%CITATION = ARXIV:1409.5864;%%"
+}
+
+
 @article{PDG_mass,
       author         = "Olive, K. A. and others",
       title          = "{Review of Particle Physics}",
@@ -23,9 +39,15 @@
       SLACcitation   = "%%CITATION = CHPHD,C38,090001;%%"
 }
 
+@misc{NSACreport,
+      title = "{2015 NSAC Long Range Plan}",
+      url={http://science.energy.gov/~/media/np/nsac/pdf/2015LRP/2015_LRPNS_091815.pdf},
+      year = "2015"
+}
+
 @Phdthesis{ChristophThesis,
 author = "Aberle, Christopher",
-title = "{Optimization, simulation and analysis of the scintillation signals in the Double Chooz experiment}",
+COMtitle = "{Optimization, simulation and analysis of the scintillation signals in the Double Chooz experiment}",
 year = "2011",
 school = "University of Heidelberg"
 }
@@ -33,7 +55,7 @@ school = "University of Heidelberg"
 
 @article{SNOp-B8-bkg,
       author         = "Maio, A.",
-      title          = "{Search for Majorana neutrinos with the SNO+ detector at
+      COMtitle          = "{Search for Majorana neutrinos with the SNO+ detector at
                         SNOLAB}",
       booktitle      = "{Proceedings of 16th International Conference on
                         Calorimetry in High Energy Physics (CALOR 2014)}",
@@ -48,16 +70,16 @@ school = "University of Heidelberg"
 }
 
 @misc{further_cuts,
-year="{}",
 note="Being able to distinguish between two-tracks and single-track events
-using the spherical analysis can allow further cuts to be made.  For
+using the spherical analysis can allow further cuts to be made. For
 example, one might use absolute directional information to suppress
 single track events where the direction of the track is consistent
-with the location of a known background such as the sun. Once a single
+with the location of a known background such as the sun~\cite{theia_white_paper}. Once a single
 track topology is established, one can use a centroid method (see
 Ref.~\cite{Aberle2014}) to reconstruct directionality of the track
 (or two degenerate tracks) in order to suppress events that are
-aligned with the direction of \B~solar neutrinos."
+aligned with the direction of $^{8}$B solar neutrinos",
+year="{2014}"
 }
 
 @Book{goldberger_watson,
@@ -65,6 +87,7 @@ author = "{M.L. Goldberger and K. M. Watson}",
 title = "{Collision Theory}",
 year = "{1964}",
 publisher = "{Wiley, New York}",
+note = "See proofs of dispersion relations."
 }
 
 @Misc{legendre_polynomials,
@@ -101,6 +124,19 @@ note = "version 1.9"
       pages          = "062502",
       year           = "2013",
 }
+
+@article{KamLANDZen2016,
+       author = "Gando, A. and others",
+       COMtitle = "{Search for Majorana Neutrinos near the Inverted Mass Hierarchy Region with KamLAND-Zen}",
+       collaboration="KamLAND-Zen",
+       journal="Phys. Rev. Lett.",
+       volume="117",
+       year="2016",
+       number="8",
+       pages="082503",
+}
+
+
 @article{EXO2014,
       author         = "Albert, J.B. and others",
       COMtitle          = "{Search for Majorana neutrinos with the
@@ -258,14 +294,14 @@ note = "{http://www.geant4.org/geant4/collaboration/working\_groups/electromagne
 
 @MastersThesis{tajimaMaster,
 author="Tajima, O.",
-title="{\it Development of Liquid Scintillator for a Large Size Neutrino Detector}",
+COMtitle="{\it Development of Liquid Scintillator for a Large Size Neutrino Detector}",
 school="Tohoku University",
 year = "2000"
 }
 
 @PhdThesis{tajimaThesis,
 author="Tajima, O.",
-title="{\it Measurement of Electron Anti-Neutrino Oscillation Parameters
+COMtitle="{\it Measurement of Electron Anti-Neutrino Oscillation Parameters
 with a Large Volume Liquid Scintillator Detector, KamLAND}",
 school="Tohoku University",
 year = "2003"
@@ -273,14 +309,14 @@ year = "2003"
 
 @Phdthesis{OlegThesis,
 author = "Perevozchikov, Oleg",
-title = "{\it Search for electron antineutrinos from the sun with KamLAND detector}",
+COMtitle = "{\it Search for electron antineutrinos from the sun with KamLAND detector}",
 year = "2009",
 school = "University of Tennessee"
 }
 
 @Phdthesis{ChrisThesis,
 author = "Grant, Christopher",
-title = "{A Monte Carlo Approach to $^{7}$Be Solar Neutrino Analysis with KamLAND}",
+COMtitle = "{A Monte Carlo Approach to $^{7}$Be Solar Neutrino Analysis with KamLAND}",
 year = "2012",
 school = "University of Alabama"
 }
@@ -344,7 +380,7 @@ school = "University of Alabama"
 %
 @article{dctwo,
  author         = "Abe, Y. and others",
- title          = "{Reactor electron antineutrino disappearance in the
+ COMtitle          = "{Reactor electron antineutrino disappearance in the
                         Double Chooz experiment}",
  collaboration  = "Double Chooz",
  journal        = "Phys. Rev.",
@@ -706,7 +742,7 @@ publisher = "{Pergamon Press}"
 %HERE ARE LINDLEY's ADDITIONS.
 %
 @article{Jenni,
-  title = {Phase-space factors for double-$\beta$ decay},
+  COMtitle = {Phase-space factors for double-$\beta$ decay},
   author = {Kotila, J. and Iachello, F.},
   journal = {Phys. Rev. C},
   volume = {85},
@@ -734,7 +770,7 @@ author = "V.I. Tretyak and Yu.G. Zdesenko"
 
 @article{minfang,
       author         = "Yeh, Minfang and Williamson, Yuping and Hahn, Richard L.",
-      title          = "{Metal-loaded liquid scintillators for neutrino
+      COMtitle          = "{Metal-loaded liquid scintillators for neutrino
                         experiments}",
       journal        = "J. Phys. Conf. Ser.",
       volume         = "136",
@@ -748,7 +784,7 @@ author = "V.I. Tretyak and Yu.G. Zdesenko"
 @article{Minfang_slow_rise_time,
       author         = "Li, Mohan and Guo, Ziyi and Yeh, Minfang and Wang, Zhe
                         and Chen, Shaomin",
-      title          = "{Separation of Scintillation and Cherenkov Lights in
+      COMtitle          = "{Separation of Scintillation and Cherenkov Lights in
                         Linear Alkyl Benzene}",
       journal        = "Nucl. Instrum. Meth.",
       volume         = "A830",
@@ -759,6 +795,12 @@ author = "V.I. Tretyak and Yu.G. Zdesenko"
       archivePrefix  = "arXiv",
       primaryClass   = "physics.ins-det",
       SLACcitation   = "%%CITATION = ARXIV:1511.09339;%%"
+}
+
+@misc{Minfang_private,
+author="M. Yeh, BNL",
+howpublished="private communication",
+year="2016"
 }
 
 @article{biller,
@@ -923,7 +965,7 @@ for MCP-basedphotodetectors}",
 
 @article{Timing_paper,
       author         = "Adams, Bernhard and others",
-      title          = "{Timing characteristics of Large Area Picosecond Photodetectors}",
+      COMtitle          = "{Timing characteristics of Large Area Picosecond Photodetectors}",
       journal        = "Nucl.Instrum.Meth.",
       volume         = "A795",
       pages          = "1-11",
@@ -970,7 +1012,7 @@ note="{http://www.hamamatsu.com/resources/pdf/etd/R3809U-61-63-64\_TPMH1295E04.p
 @article{Photonis,
       author         = "Orlov, Dmitry A. and DeFazio, Jeff and Duarte Pinto,
                         Serge and Glazenborg, Rene and Kernen, Emilie",
-      title          = "{High quantum efficiency S-20 photocathodes in photon
+      COMtitle          = "{High quantum efficiency S-20 photocathodes in photon
                         counting detectors}",
       booktitle      = "{Proceedings, Workshop on Fast Cherenkov Detectors:
                         Photon detection, DIRC design and DAQ (DIRC2015): Giessen,
