--- a/B8Paper/25-EventTiming.tex
+++ b/B8Paper/25-EventTiming.tex
@@ -6,20 +6,20 @@
 
 \subsection{Kinematics of the 0\nbb-decay signal}
 
-We simulate the kinematics of 0\nbb~ events using a custom Monte
+We simulate the kinematics of 0\nbb-decay events using a custom Monte
 Carlo with momentum and angle-dependent phase space
-factors for 0\nbb~decay~\cite{Jenni}.  The spectrum in kinetic energy
-of the electrons in 0\nbb~ decays of \Te~ is shown in
+factors for 0\nbb-decay~\cite{Jenni}.  The spectrum in kinetic energy
+of one electron in 0\nbb-decays of \Te~ is shown in
 Figure~\ref{fig:Energy_spectrum}.
 
 \begin{figure*}[ht]
   \centering
   \includegraphics[width=0.65\textwidth]{hK_che_threshold.pdf}
-  \caption{The spectrum in kinetic energy of the electrons in 0\nbb~
+  \caption{The spectrum in kinetic energy of one of the electrons in 0\nbb-
   decays of \Te~ (endpoint 2.53 MeV). The vertical dashed line
   indicates the Cherenkov threshold in the liquid scintillator of the
   detector model. Single electrons from \B~ solar neutrinos that are
-  potential background to the 0\nbb~ search are close in energy to the
+  potential background to the 0\nbb-decay search are close in energy to the
   endpoint and will be above the Cherenkov threshold.}
  \label{fig:Energy_spectrum}
 \end{figure*}
@@ -37,21 +37,21 @@ panel of Fig.~\ref{fig:Kinematics} (solid line).
   \includegraphics[width=0.49\textwidth]{hCos_Te130.pdf}
   \includegraphics[width=0.49\textwidth]{hE1toQ_Te130.pdf}
   \caption{\emph{Left:} The distribution in the cosine of the angle
-      between the two electrons for 0{\nbb} decays (solid black line).
+      between the two electrons for 0\nbb-decays (\emph{solid red line}).
       \emph{Right:} The fraction of the total energy carried by one of
-      the two electrons in 0{\nbb} decays (solid black line).  In both
-      panels the dashed red line is the corresponding distribution for
-      SM 2\nbb~ events with the total kinetic energy of the electrons
-      above 90\% of the Q-value.}
+      the two electrons in 0\nbb-decays (\emph{solid red line}).  In both
+      panels the dashed black line is the corresponding distribution for
+      SM 2\nbb-decay events with the total kinetic energy of the electrons
+      above 95\% of the Q-value.}
   \label{fig:Kinematics}
 \end{figure*}
 
-\subsection{Comparison to SM 2\nbb~ decay}
+\subsection{Comparison to SM 2\nbb-decay}
 \label{comparison}
 
 Figure~\ref{fig:Kinematics} also shows the angular separation and
-energy sharing of the two electrons in SM 1\nbb~ events with the total kinetic
-energy of the electrons above 90\% of the Q-value, found using the
+energy sharing of the two electrons in SM 2\nbb-decay events with the total kinetic
+energy of the electrons above 95\% of the Q-value, found using the
 same Monte Carlo generator but with SM phase space
 factors~\cite{Jenni}.  As seen from the plot, the electron angular
 correlations for 0\nbb-decay are slightly more back-to-back than those
@@ -61,25 +61,25 @@ neutrinos~\cite{Jenni}. The energy sharing is essentially
 identical.
 
 \subsection{Production and Selection 
-of Cherenkov light by electrons from \Te~ 0\nbb~ decays}
+of Cherenkov light by electrons from \Te~ 0\nbb-decays}
 Figure~\ref{fig:Energy_spectrum} also shows the threshold for the
 production of Cherenkov light.
 Examining the kinematics for one of the electrons from \Te~
-0\nbb~decay with an equal energy split, the 1.26~MeV electron travels
+0\nbb-decay with an equal energy split, the 1.26~MeV electron travels
 on average a total path length of 7.1$\pm$0.9~mm, has a distance from
 the origin of 5.6$\pm$1.0~mm in 26 $\pm$4~ps, and takes
 24$\pm$3~ps to drop below Cherenkov threshold.  We note that due
 to scattering of the electron, the final direction of the electron
-before it stops does not correspond to the initial direction; however,
+before it stops does not match the initial direction; however,
 the scattering angle is small at the time that the majority of
 Cherenkov light is produced.
 
 Figure~\ref{fig:ArrivalTimeDist} shows distributions from the detector
 simulation for 1000 \Te~ 0\nbb-decay events at the center of the
-detector. The left-hand panel compares the time of photoelectron (PE)
+detector. The left-hand panel compares the time of PE
 arrival at a photodetector anode for Cherenkov and scintillation
-light, assuming a transit-time spread (TTS)~\cite{TTS} in the
-photodetector of 100 ps.  A selection of the PEs with relatively small
+light, assuming a TTS in the
+photodetector of 100 ps.  A selection of the PEs with relatively early
 arrival time creates a sample with a high fraction of directional
 Cherenkov light, designated as the `early PE' sample.
 
@@ -97,8 +97,8 @@ distribution widths of 5.2 and 7.3 PEs respectively.
   \includegraphics[width=0.45\textwidth]{hT_Te130_v2.pdf}
 \hfil
   \includegraphics[width=0.45\textwidth]{hMomNPhot_Te130.pdf}
-  \caption{\emph{Left:} Photoelectron (PE) arrival times after
-    application of the photo-detector transit time spread (TTS) of
+  \caption{\emph{Left:} PE arrival times after
+    application of the photo-detector TTS of
     100~ps for the default simulation of \Te~0\nbb-decay produced at
     the center of the detector.  Scintillation PEs (blue solid line)
     are compared to Cherenkov PEs (red dotted line). The vertical line
@@ -139,10 +139,10 @@ electrons from 0\nbb-events.
   \includegraphics[width=0.45\textwidth]{hTche_Te130_B8_v2.pdf}
 \hfil
   \includegraphics[width=0.45\textwidth]{hMomNPhot_1el_2p529MeV.pdf}
-  \caption{\emph{Left:} A `zoomed-in' view of the photo-electron (PE)
+  \caption{\emph{Left:} A `zoomed-in' view of the PEs
    arrival times of signal and background events produced at the
    center of the detector.  The distribution in time for Cherenkov
-   PEs from \Te 0\nbb is shown in solid black; Cherenkov PEs from
+   PEs from \Te~0\nbb-decay is shown in solid black; Cherenkov PEs from
    \B~ solar neutrino background are shown in dashed red. PEs from
    scintillation are shown as the blue solid line. The line at 33.5~ns
    indicates the cut for the early PE sample selection.  \emph{Right:}
