--- a/B8Paper/Appendix_A.tex
+++ b/B8Paper/Appendix_A.tex
@@ -9,72 +9,74 @@ $f(\theta,\phi)$ can be decomposed into a sum of spherical harmonics:
 
 \begin{eqnarray}
 \label{eq1}
-f(\theta,\phi) = \sum_{l=0}^{\infty} \sum_{m=-l}^{l} f_{lm} Y_{lm}(\theta,\phi),
+f(\theta,\phi) = \sum_{\ell=0}^{\infty} \sum_{m=-\ell}^{\ell} f_{\ell m} Y_{\ell m}(\theta,\phi),
 \end{eqnarray}
 
-where $Y_{lm}$ are Laplace's spherical harmonics defined in a
-real-value basis using Legendre polynomials $P_l$~\cite{legendre_polynomials}:
+where $Y_{\ell m}$ are Laplace's spherical harmonics defined in a
+real-value basis using Legendre polynomials $P_{\ell}$~\cite{legendre_polynomials}:
 
 \begin{eqnarray}
 \label{eq2}
-Y_{lm} = \left\{
+Y_{\ell m} = \left\{
   \begin{array}{@{}ll@{}}
-    \sqrt{2}N_{lm}P_l^m(cos\theta)cos~m\phi, & \text{if}\ m>0 \\
-    N_{lm} = \sqrt{\frac{(2l+1)}{4\pi} \frac{(l-m)!}{(l+m)!}}, & \text{if}\ m=0 \\
-    \sqrt{2}N_{l|m|}P_l^{|m|}(cos\theta)sin~|m|\phi, & \text{if}\ m<0
+    \sqrt{2}N_{\ell m}P_{\ell}^m(\cos\theta)\cos~m\phi, & \text{if}\ m>0 \\
+    N_{\ell m} = \sqrt{\frac{(2\ell+1)}{4\pi} \frac{(\ell-m)!}{(\ell+m)!}}, & \text{if}\ m=0 \\
+    \sqrt{2}N_{\ell |m|}P_{\ell}^{|m|}(\cos\theta)\sin~|m|\phi, & \text{if}\ m<0
   \end{array}\right.
 \end{eqnarray}
 
-where the coefficients $f_{lm}$ are defined as
+where the coefficients $f_{\ell m}$ are defined as
  
 \begin{eqnarray}
 \label{eq3}
-f_{lm} = \int_{0}^{2\pi} d\phi \int_0^{\pi} d\theta sin\theta f(\theta,\phi) Y_{lm}(\theta,\phi).
+f_{\ell m} = \int_{0}^{2\pi} d\phi \int_0^{\pi} d\theta \sin\theta f(\theta,\phi) Y_{\ell m}(\theta,\phi).
 \end{eqnarray}
 
 Equation~\ref{eq4} defines the power spectrum of $f(\theta,\phi)$ in
-the spherical harmonics representation, $s_l$, where $l$ is a multiple
-moment. The power spectrum, $s_l$, is invariant under rotation. It is
-unique to each of the functions $f_i(\theta,\phi)$, $i=$1,2,3...,
-which cannot be transformed into each other by rotation.
+the spherical harmonics representation, $s_{\ell}$, where $l$ is a multipole
+moment. The power spectrum, $s_{\ell}$, is invariant under rotation. 
+%It is
+%unique to each of the functions $f_i(\theta,\phi)$, $i=$1,2,3...,
+%which cannot be transformed into each other by rotation.
 
 \begin{eqnarray}
 \label{eq4}
-s_l = \sum_{m=-l}^{m=l} |f_{lm}|^2
+s_{\ell} = \sum_{m=-\ell}^{m=\ell} |f_{\ell m}|^2
 \end{eqnarray}
 
 The event topology in a spherical detector determines the distribution
 of the PE's on the detector sphere, and, therefore, a set of
-$s_l$'s. These values can serve as a quantitative figure of merit for
-different event topologies. The rotation invariance of the $s_l$'s ensures
+$s_{\ell}$'s. These values can serve as a quantitative figure of merit for
+different event topologies. The rotation invariance of the $s_{\ell}$'s ensures
 that this figure of merit does not depend on the orientation of the
 event with respect to the chosen coordinate frame.
 
-The sum of $s_l$'s over all multiple moments equals to the $L^2$ norm of the
+The sum of $s_{\ell}$'s over all multipole moments equals to the $L^2$ norm of the
 function $f(\theta,\phi)$:
 
 \begin{eqnarray}
 \label{eq5}
-\sum_{l=0}^{\infty} s_l = \int_{\Omega} |f(\theta,\phi)|^2 d\Omega.
+\sum_{\ell=0}^{\infty} s_{\ell} = \int_{\Omega} |f(\theta,\phi)|^2 d\Omega.
 \end{eqnarray}
 
 The normalized power spectrum is thus:
 
 \begin{eqnarray}
 \label{eq6}
-S_l = \frac{s_l}{\sum_{l=0}^{\infty} s_l} =  \frac{s_l}{\int_{\Omega} |f(\theta,\phi)|^2 d\Omega},
+\mathcal{S}_{\ell} = \frac{s_{\ell}}{\sum_{\ell=0}^{\infty} s_{\ell}} =  \frac{s_{\ell}}{\int_{\Omega} |f(\theta,\phi)|^2 d\Omega},
 \end{eqnarray}
 
 and can be used to compare the shapes of various functions
 $f(\theta,\phi)$ with different normalizations. As the total number of
 PEs detected on the detector sphere fluctuates from event to event we
-use the normalized power $S_l$.
+use the normalized power $\mathcal{S}_{\ell}$.
 
 
 \subsection{Spherical Harmonics Analysis and Off-center Events}
 
-In general, the power spectrum $S_l$ is rotation invariant for a given
-topology only if events originate in the center of the detector. In
+In general, events with the same event topology result in the same
+the power spectrum $S_{\ell}$ only if events originate in the center 
+of the detector. In
 order to compare the spherical harmonics for events with verticies away
 from the center, a coordinate transformation for each photon hit is
 needed. The necessary transformation applied for each PE within an
@@ -108,18 +110,18 @@ the vertex in the original coordinates, respectively.
 \end{figure*}
 
 
-\subsection{Implementation of the spherical harmonics analysis}
+%\subsection{Implementation of the spherical harmonics analysis}
 
-The numerical calculation of the power spectrum is implemented as follows.
-For each event, a 2-D histogram of  the distribution of PEs on the
-detector surface in $\theta$ vs $\phi$ is created. We then treat this
-histogram as a function $f(\theta,\phi)$, where the value of the
-function for any pair of $\theta$ and $\phi$ is equal to the number of
-PE's in the histogram bin corresponding to that pair.
+%The numerical calculation of the power spectrum is implemented as follows.
+%For each event, a 2-D histogram of  the distribution of PEs on the
+%detector surface in $\theta$ vs $\phi$ is created. We then treat this
+%histogram as a function $f(\theta,\phi)$, where the value of the
+%function for any pair of $\theta$ and $\phi$ is equal to the number of
+%PE's in the histogram bin corresponding to that pair.
 
-The coefficients $f_{lm}$ from Eq.~\ref{eq3} are calculated using a
-Monte Carlo integration technique. The values of the $S_l$ moments are
-calculated using Eqs.\ref{eq4} - \ref{eq6}. 
+%The coefficients $f_{\ell m}$ from Eq.~\ref{eq3} are calculated using a
+%Monte Carlo integration technique. The values of the $S_{\ell}$ moments are
+%calculated using Eqs.\ref{eq4} - \ref{eq6}. 
 %{\bf Also need to provide
 %reference to the libraries for Legendre polynomials.}
 
